
??? 2005 - Release 0.3.9
Changes since release 0.3.8:

- QL_SQRT, QL_MIN etc. deprecated in favor of std::sqrt, std::min...

- Interpolated discount curve can now be set an interpolation other
  than log-linear

- Added a tentative tracing facility to ease debugging

- Formatters deprecated in favor of output manipulators. A number of
  data types can now be sent directly to output streams. 
- Stream-based implementation of QL_REQUIRE, QL_TRACE and similar macros.
  Together with manipulators, this allows one to write simpler error
  messages, as in:
  QL_FAIL("forward at date " << d << " is " << io::rate(f));

- Improved Bond class
  - yield-related calculation can be performed with either compounded or
    continuous compounding
  - added theoretical price based on discount curve
  - fixed-rate coupon bonds can define different rates for each coupon
  - added zero-coupon and floating-rate bonds

- FlatForward can now take rates with compounding other than continuous

- Added backward- and forward-flat interpolations
